update image alignment issue

--- a/blockbase/sass/blocks/_image.scss
+++ b/blockbase/sass/blocks/_image.scss
@@ -5,7 +5,7 @@
 	default styles.  It's difficult to say how this will land, however
 	based on discussion found in (many) related issues here:
 	https://github.com/WordPress/gutenberg/issues/28923
-	See also: https://github.com/WordPress/gutenberg/issues/34646
+	https://github.com/WordPress/gutenberg/issues/29506
 	*/
 	text-align: center;
 }
